04_dz_kuber_1.5/01_namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dz5 # Имя неймспейса
  namespace: dz5 # Пространство имен
