04_dz_kuber_1.5/02_deploy_svc_nginx.yml
apiVersion: apps/v1 # Версия api изменилось и теперь выглядит так
kind: Deployment
metadata:
  name: dpl-nginx-dz5 # Имя деплоймента
  namespace: dz5 # Пространство имен
spec:
  replicas: 3 # Количество реплик
  selector: # Селектор на наши метки
    matchLabels:
      app: fe-dz5
  template: # Шаблон ПОДа
    metadata:
      labels: # Метки, которые будут установлены при запуске ПОДа из этого шаблона
        app: fe-dz5
    spec:
      containers:
        - image: nginx:1.19.2
          name: nginx
