04_dz_kuber_1.5/04_deploy_svc_multitool.yml
apiVersion: apps/v1 # Версия api изменилось и теперь выглядит так
kind: Deployment
metadata:
  name: dpl-multitool-dz5 # Имя деплоймента
  namespace: dz5 # Пространство имен
spec:
  replicas: 1 # Количество реплик
  selector: # Селектор на наши метки
    matchLabels:
      app: be-dz5
  template: # Шаблон ПОДа
    metadata:
      labels: # Метки, которые будут установлены при запуске ПОДа из этого шаблона
        app: be-dz5
    spec:
      containers:
        - image: wbitt/network-multitool
          name: multitool
