04_dz_kuber_1.5/05_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dz5
  namespace: dz5 # Пространство имен
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: microk8s-03-ingress.test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-fe-dz5
                port:
                  name: fe-dz5
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: svc-be-dz5
                port:
                  name: be-dz5
